--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
       </header>
 
       <main>
+        <div class="options-area">
+          <label for="formatSelect">Output Format:</label>
+          <select id="formatSelect">
+            <option value="original">Original</option>
+            <option value="image/jpeg">JPEG</option>
+            <option value="image/png">PNG</option>
+            <option value="image/webp">WebP</option>
+            <option value="image/avif">AVIF</option>
+          </select>
+        </div>
+
         <div class="upload-area" id="uploadArea">
           <div class="icon">📁</div>
           <h3>Drag & drop your image here</h3>
@@ -47,7 +58,10 @@
       </main>
 
       <footer>
-        <p>Built with ❤️ using Node.js & Tinify</p>
+        <p>
+          Built with ❤️ by <a href="https://jackosei.com">Jack Osei</a>, using
+          Node.js & Tinify API
+        </p>
       </footer>
     </div>
     <script src="script.js"></script>
